rocktreed the settings page up a little more. Also adding TOOLTIP functionality.

--- a/rocktree-core/settings.css
+++ b/rocktree-core/settings.css
@@ -7,6 +7,9 @@
   color: #000;
   border: none;
   border-top: 3px solid white; }
+  .rt-settings-tab:active {
+    outline: 0;
+    color: #000; }
 
 .rt-settings-tab:hover, .rt-settings-tab-selected {
   border-top-color: #009b77;
@@ -79,3 +82,52 @@ div.updated {
   border-color: #009b77;
   border-radius: 0;
   margin: 20px 20px 20px 0; }
+
+/* =Help Tooltip
+------------------------------- */
+.rt-settings-help {
+  padding: 3px 6px;
+  margin: 0 0 0 5px;
+  background: #009b77;
+  color: #FFFFFF; }
+
+.ui-tooltip {
+  padding: 10px;
+  color: white;
+  border-radius: 3px;
+  font: normal 11px "Helvetica Neue", Sans-Serif;
+  box-shadow: 0 0 2px #333333;
+  background: #009b77;
+  border: none; }
+
+.arrow {
+  width: 70px;
+  height: 16px;
+  overflow: hidden;
+  position: absolute;
+  left: 50%;
+  margin-left: -35px;
+  bottom: -16px; }
+  .arrow:after {
+    background: #009b77;
+    border: none;
+    content: "";
+    position: absolute;
+    left: 20px;
+    top: -20px;
+    width: 25px;
+    height: 25px;
+    box-shadow: 6px 5px 9px -9px black;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    tranform: rotate(45deg); }
+  .arrow .top {
+    top: -16px;
+    bottom: auto; }
+    .arrow .top:after {
+      bottom: -20px;
+      top: auto; }
+  .arrow .left {
+    left: 20%; }
