Working on tooltips and styling the widget. This is a very minor commit.

--- a/rocktree-core/settings.css
+++ b/rocktree-core/settings.css
@@ -90,6 +90,8 @@ div.updated {
   margin: 0 0 0 5px;
   background: #009b77;
   color: #FFFFFF; }
+  .rt-settings-help:hover {
+    cursor: default; }
 
 .ui-tooltip {
   padding: 10px;
